# necsus

./: .gitignore  .replit  Caddyfile  Procfile  README.md  README.old.md  api.py  api.yaml  bot-spec.yml  bots.py  commands.py  crossdomain.py  db.py  events.py  frontend.py  init_db.py  install.sh  interactivity.py  logconfig.yaml  neccsus.py  necsus.ini  necsus.py  pyproject.toml  requirements.txt  run.sh  schema.sql  server.py  ws.py
backups/: backup-necsus.sh
client/: Neccsus.js  elm.json  index.css  index.html  lobby.html  lobby.js  neccsus.css  necsus.css  necsus.js
client/css/: index.css
client/js/: marked-plaintext.js  vue.js
client/src/: Colours.elm  Elements.elm  Model.elm  Neccsus.elm
client/static/: site.webmanifest
example_bots/: __init__.py  __main__.py  server.py
example_bots/static/: buttonbot.css  buttonbot.js  buttonbot.mjs
necsus/: __main__.py  broker.py  db.py  events.py  server.py
swagger-ui/: swagger-initializer.js
templates/: api.html  attachment.html  buttons.html  home.html  message.html
tests/: conftest.py  test_necsus.py
