[tool.poetry]
name = "NeCSuS"
version = "0.0.0"
description = "Slack, but for NCSS students."
authors = [
	"Kenni Bawden <kenni.bawden@gmail.com>",
	"Aleksa Sarai <cyphar@cyphar.com>",
	"Samuel Walladge <samuel@swalladge.net>",
	"Tom Kunc <tomkunc0@gmail.com>",
	"Joel Gibson <joel@jgibson.id.au>",
]

[tool.poetry.dependencies]
python = "~3.10"
setuptools = "*"

# For the main server
uvicorn = {extras = ["standard"], version = "~0.24"}
starlette = "~0.33"
httpx = "~0.25.2"
pypika = "~0.48"
anyio = "~4.1.0"

# For example bots
flask = "~3.0.0"
flask-cors = "^4.0.0"

# For testing
pytest = "~7.4.3"
respx = "^0.20.2"
asgiref = "^3.7.2"
regex = "^2023.12.25"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.ruff]
select = ["E4", "E7", "E9", "F", "I"]
ignore = [
	"E711",  # Comparison to `None` should be `cond is None`
]
